writing python functions blog post

--- a/_posts/2024-12-12-code.md
+++ b/_posts/2024-12-12-code.md
@@ -10,21 +10,50 @@ giscus_comments: true
 related_posts: false
 ---
 
+## Lecture 04 - Functions and debugging
+In this lecture we are going to see how to write our own functions. But why do we need to write our own functions?
 
-This theme implements a built-in Jekyll feature, the use of Rouge, for syntax highlighting.
-It supports more than 100 languages.
-This example is in C++.
-All you have to do is wrap your code in markdown code tags:
+When we build our own programs, those programs are going to consist in hundreds or thousands of lines of code; therefore we should break such code into chunks that are smaller, more maintainable and potentially more reusable. We refer to these chunks are **functions**.
 
-````markdown
-```c++
-code code code
-```
-````
+
+### How to write your own function
+So, how can we create our own custom functions?
+
+We start by using the `def` keyword, which is short for “define”; next we are going to give our function a name by following some best practices that can be found [here](https://peps.python.org/pep- 0008/#introduction); then we add round parentheses and a colon:
+
 
 ```python
-print('hello world')
+# With this line, we start creating a new custom function
+def my_dinner(): 
+   None
 ```
+After using the `def function_name():` notation, if we go to a newline, we are going to get **indentation**, which means that the statements that follow belong to the function that we just created:
+
+```python
+# Note! Both statements belong to the function because they are indented
+def my_dinner(): 
+   print('noodles') 
+   print('mushrooms')
+```
+
+Now that we are done with writing our function we need to _call it_. **Calling** a function quite literally means to call the function and thus trigger its behaviour.
+
+So we go to a newline, remove indentation, and use line breaks to make our code clean and readable.
+
+```python
+def my_dinner(): 
+   print('noodles') 
+   print('mushrooms')
+
+my_dinner()
+```
+
+**Q**: What is the difference between the `my_dinner()` function and the `print()` functions? 
+**A**: That the `my_dinner()` function does not take any input, while the `print()` function takes some input.
+
+But we can also write custom functions that accept some input. Let’s modify our `my_dinner()` function so as to pass it some input, for example the types of ingredients. We distinguish between _parameters_ and _arguments_.
+
+
 
 For displaying code in a list item, you have to be aware of the indentation, as stated in this [Stackoverflow answer](https://stackoverflow.com/questions/34987908/embed-a-code-block-in-a-list-item-with-proper-indentation-in-kramdown/38090598#38090598). You must indent your code by **(3 \* bullet_indent_level)** spaces. This is because kramdown (the markdown engine used by Jekyll) indentation for the code block in lists is determined by the column number of the first non-space character after the list item marker. For example:
 
