add pandas pic and modify code post

--- a/_posts/2024-12-12-code.md
+++ b/_posts/2024-12-12-code.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: a post with jupyter notebook
+title: Python functions' tutorial
 date: 2024-12-12 08:57:00-0400
 description: an example of a blog post with code
 tags: programming
@@ -19,7 +19,7 @@ When we build our own programs, those programs are going to consist in hundreds 
 ### How to write your own function
 So, how can we create our own custom functions?
 
-We start by using the `def` keyword, which is short for “define”; next we are going to give our function a name by following some best practices that can be found [here](https://peps.python.org/pep- 0008/#introduction); then we add round parentheses and a colon:
+We start by using the `def` keyword, which is short for “define”; next we are going to give our function a name by following some best practices that can be found [here](https://peps.python.org/pep-0008/); then we add round parentheses and a colon:
 
 
 ```python
@@ -52,6 +52,58 @@ my_dinner()
 **A**: That the `my_dinner()` function does not take any input, while the `print()` function takes some input.
 
 But we can also write custom functions that accept some input. Let’s modify our `my_dinner()` function so as to pass it some input, for example the types of ingredients. We distinguish between _parameters_ and _arguments_.
+
+### Parameters vs. arguments
+
+When defining a function, in between parentheses we are going to list our **parameters**, for instance:
+
+```python
+def my_dinner(noodle_type, side_type): 
+   print('noodles') 
+   print('mushrooms')
+```
+
+Now, when **calling** this function, we need to supply **values** for the parameters that we specified; we refer to these values as **arguments**:
+
+```python
+# def:                    keyword
+# my_dinner:              function name
+# noodle_type, side_type: function parameters
+# print('Noodles'):       first statement
+# print('Mushrooms'):     second statement
+def my_dinner(noodle_type, side_type): 
+   print('noodles') 
+   print('mushrooms')
+
+# my_dinner():            function calling
+# 'glass', 'shiitake':    function arguments
+
+my_dinner('glass', 'shiitake')
+```
+
+**Remember**
+- Parameter = input of the function
+- Argument = actual value of the parameter that we pass to the function
+
+Now let’s change the function **statements** so as to accept the values that we pass to the function in input:
+
+```python
+# We can use string formatting!
+def my_dinner(noodle_type, side_type): 
+   print(f'{noodle_type} noodles') 
+   print(f'{side_type} mushrooms')
+
+my_dinner('glass', 'shiitake')
+```
+Now this function is more useful and we can call it with different arguments:
+
+```python
+my_dinner('soba', 'enoki') 
+print('\n')
+my_dinner('udon', 'stir fry') 
+print('\n') 
+my_dinner('ramen', 'oyster')
+```
 
 
 
