--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,14 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{BMCGB = {BMC Genome Biology,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{balvert2024,
+  title={Considerations in the search for epistasis},
+  author={Balvert, M., Cooper-Knock, J., Stamp, J., Byrne, R.P., Mourragui, S., van Gils, J., Benonisdottir, S., Schlüter, J., Kenna, K., Abeln, S., Iacoangeli, A., Daub, J.T., Browning, B.L., Taş, G., Hu, J., Wang, Y., Alhathli, E., Harvey, C., \textbf{Pianesi, L.}, Schulte, S.C., González-Domínguez J., Garrisson, E., Lorentz workshop on epistasis, Snyder, M.P., Schönhuth, A., Sng, L.M.F. and Twine, N.A.},
+  year={2024},
+  publisher={Genome Biology},
+  html={https://genomebiology.biomedcentral.com/articles/10.1186/s13059-024-03427-z}
 }
 
 @book{einstein1956investigations,
@@ -30,33 +30,23 @@
   number={6},
   pages={403--404},
   year={1950},
-  publisher={American Association of Physics Teachers}
+  publisher={American Association of Physics Teachers},
+  selected={true}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
+@article{balvert2024,
+  abbr={Genome Biology},
+  title={Considerations in the search for epistasis},
+  author={Balvert, M. and Cooper-Knock, J. and Stamp, J. and Byrne, R.P. and Mourragui, S. and van Gils, J. and Benonisdottir, S. and Schlüter, J. and Kenna, K. and Abeln, S. and Iacoangeli, A. and Daub, J.T. and Browning, B.L. and Taş, G. and Hu, J. and Wang, Y. and Alhathli, E. and Harvey, C. and Pianesi, L. and Schulte, S.C. and González-Domínguez J. and Garrisson, E. and {Lorentz workshop on epistasis} and Snyder, M.P. and Schönhuth, A. and Sng, L.M.F and Twine, N.A.},
+  journal={Genome Biology},
+  volume={25},
+  issue={296},
+  year={2024},
+  month={November},
+  publisher=BMCGB,
+  doi={10.1186/s13059-024-03427-z},
+  url={https://genomebiology.biomedcentral.com/articles/10.1186/s13059-024-03427-z},
   google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
   selected={true},
   inspirehep_id = {3255}
 }
