--- a/_posts/2024-12-12-code.md
+++ b/_posts/2024-12-12-code.md
@@ -5,7 +5,7 @@ date: 2024-12-12 08:57:00-0400
 description: an example of a blog post with code
 tags: programming
 categories: python
-featured: true
+featured: false
 giscus_comments: true
 related_posts: false
 ---
